2003-11-15  Wakaba  <wakaba@suika.fam.cx>

	* Node.pm: New. (Was known as SuikaWiki::Markup::SuikaWikiConfig20.pm.)

2003-10-23  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_text): Bug fix about treatment of ":".

2003-10-16  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_text): Allow ":" in element name.

2003-09-21  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: New module.
	* ChangeLog: New file.
