@@ -1,3 +1,11 @@
+2004-04-25  Wakaba  <wakaba@suika.fam.cx>
+
+	* Node.pm (stringify): Insert NL if value has some COLON.
+
+2004-04-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* Node.pm (clone): New.
+
 2003-11-15  Wakaba  <wakaba@suika.fam.cx>
 
 	* Node.pm: New. (Was known as SuikaWiki::Markup::SuikaWikiConfig20.pm.)
